# mp1-zybo-nn

./: .gitignore  CMakeLists.txt  Makefile  README.md  display_results.py  display_results_simple.py  n2d2_imexp.args  n2d2_imexp.cpp  tcp_client.py  tcp_server.py
GeneralObjectRecognition/: GoogleNet.ini  output_labels.out  run.sh
export_C_HLS_int8/include/: conv1.h  conv2.h  env.h  fc1.h  fc2.h  network.h  params.h
export_C_HLS_int8/src/: network.c
export_C_HLS_int8/stimuli/: env0000.pgm  env0001.pgm  env0002.pgm  env0003.pgm  env0004.pgm  env0005.pgm  env0006.pgm  env0007.pgm  env0008.pgm  env0009.pgm  env0010.pgm  env0011.pgm  env0012.pgm  env0013.pgm  env0014.pgm  env0015.pgm  env0016.pgm  env0017.pgm  env0018.pgm  env0019.pgm  env0020.pgm  env0021.pgm  env0022.pgm  env0023.pgm  env0024.pgm  env0025.pgm  env0026.pgm  env0027.pgm  env0028.pgm  env0029.pgm  env0030.pgm  env0031.pgm  env0032.pgm  env0033.pgm  env0034.pgm  env0035.pgm  env0036.pgm  env0037.pgm  env0038.pgm  env0039.pgm  (+9960 more)
export_C_HLS_int8/stimuli_stats/: _cache
tools/: display_results_simple.py  tcp_client.py  tcp_server.py
zybo_nn/: zybo_run.tcl
zybo_nn/mycores/: vivado.jou  vivado_9460.backup.jou
zybo_nn/mycores/ip_repo/: vivado.jou
zybo_nn/mycores/ip_repo/AXIS_mem_read_1.0/: component.xml
zybo_nn/mycores/ip_repo/AXIS_mem_read_1.0/hdl/: AXIS_mem_read_v1_0.v  AXIS_mem_read_v1_0_M_AXIS.v  AXIS_mem_read_v1_0_S_AXIS.v
zybo_nn/mycores/ip_repo/AXIS_mem_write_1.0/: component.xml
zybo_nn/mycores/ip_repo/AXIS_mem_write_1.0/hdl/: AXIS_mem_write_v1_0.v  AXIS_mem_write_v1_0_M_AXIS.v  AXIS_mem_write_v1_0_S_AXIS.v
zybo_nn/mycores/managed_ip_project/: managed_ip_project.xpr
zybo_nn/mycores/managed_ip_project/managed_ip_project.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  webtalk_pa.xml
zybo_nn/mycores/managed_ip_project/managed_ip_project.tmp/AXIS_mem_write_v1_0_project/: AXIS_mem_write_v1_0_project.xpr
zybo_nn/sdk/.metadata/: version.ini
zybo_nn/sdk/.metadata/.plugins/org.eclipse.cdt.core/: axi_test.1567166405327.pdom  axi_test_bsp.1567166405324.pdom  fsbl.1567166190233.pdom  fsbl_bsp.1567166192624.pdom  intr_example.1567181398507.pdom  intr_example_bsp.1567181398514.pdom
zybo_nn/sdk/.metadata/.plugins/org.eclipse.cdt.make.core/: axi_test.sc  fsbl.sc  intr_example.sc
zybo_nn/sdk/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
zybo_nn/sdk/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
zybo_nn/sdk/.metadata/.plugins/org.eclipse.tcf.debug/: peers.ini
zybo_nn/sdk/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
zybo_nn/sdk/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
zybo_nn/sdk/.sdk/launch_scripts/xilinx_c-c++_application_(system_debugger)/: system_debugger_using_debug_axi_test.elf_on_local.tcl  system_debugger_using_debug_fsbl.elf_on_local.tcl
zybo_nn/sdk/axi_test/: .cproject  .project
zybo_nn/sdk/axi_test/Debug/: axi_test.elf  axi_test.elf.size  makefile
zybo_nn/sdk/axi_test/Debug/src/: helloworld.d  platform.d  ps7_init.d  subdir.mk
zybo_nn/sdk/axi_test/src/: helloworld.c
zybo_nn/sdk/axi_test_bsp/: .cproject
zybo_nn/sdk/axi_test_bsp/ps7_cortexa9_0/include/: xparameters.h
zybo_nn/sdk/design_1_wrapper_hw_platform_0/: .project
zybo_nn/sdk/fsbl/: .cproject
zybo_nn/sdk/fsbl/Debug/: fsbl.elf  fsbl.elf.size
zybo_nn/sdk/fsbl/Debug/src/: fsbl_hooks.d  image_mover.d  main.d  nand.d  nor.d  pcap.d  ps7_init.d  qspi.d  sd.d  subdir.mk
zybo_nn/sdk/fsbl/src/: main.c
zybo_nn/sdk/fsbl_bsp/: .cproject  system.mss
zybo_nn/sdk/fsbl_bsp/ps7_cortexa9_0/include/: xparameters.h
zybo_nn/sdk/intr_example/: .cproject  .project
zybo_nn/sdk/intr_example/Debug/: makefile
zybo_nn/sdk/intr_example/Debug/src/: subdir.mk  xaxidma_example_simple_intr.d
zybo_nn/sdk/intr_example_bsp/: .cproject  .project  system.mss
zybo_nn/sdk/webtalk/: sdk_webtalk.tcl  sdk_webtalk.wdm  usage_statistics_ext_sdk.html  usage_statistics_ext_sdk.xml  webtalk.jou  webtalk_7653.backup.jou
zybo_nn/vivado/project_1/: project_1.xpr
zybo_nn/vivado/project_1/project_1.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
zybo_nn/vivado/project_1/project_1.ip_user_files/mem_init_files/: ps7_init.html
zybo_nn/vivado/project_1/project_1.runs/.jobs/: vrs_config_1.xml  vrs_config_10.xml  vrs_config_11.xml  vrs_config_12.xml  vrs_config_13.xml  vrs_config_14.xml  vrs_config_16.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_6.xml
zybo_nn/vivado/project_1/project_1.runs/design_1_auto_pc_0_synth_1/: .vivado.begin.rst  design_1_auto_pc_0.dcp  design_1_auto_pc_0.tcl  design_1_auto_pc_0.vds  design_1_auto_pc_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  runme.sh  vivado.jou  vivado.pb
zybo_nn/vivado/project_1/project_1.runs/design_1_axi_dma_0_0_synth_1/: .vivado.begin.rst  design_1_axi_dma_0_0.dcp  design_1_axi_dma_0_0.tcl  design_1_axi_dma_0_0.vds  design_1_axi_dma_0_0_utilization_synth.pb  design_1_axi_dma_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  runme.sh  vivado.jou  vivado.pb
zybo_nn/vivado/project_1/project_1.runs/design_1_axi_dma_1_0_synth_1/: .vivado.begin.rst  design_1_axi_dma_1_0.tcl  design_1_axi_dma_1_0.vds  design_1_axi_dma_1_0_utilization_synth.pb  design_1_axi_dma_1_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
zybo_nn/vivado/project_1/project_1.runs/design_1_axi_smc_1_synth_1/: .vivado.begin.rst  design_1_axi_smc_1.dcp  design_1_axi_smc_1.tcl  design_1_axi_smc_1.vds  design_1_axi_smc_1_utilization_synth.pb  design_1_axi_smc_1_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  vivado.jou  vivado.pb
zybo_nn/vivado/project_1/project_1.runs/design_1_axis_data_fifo_0_0_synth_1/: .vivado.begin.rst  design_1_axis_data_fifo_0_0.dcp  design_1_axis_data_fifo_0_0.tcl  design_1_axis_data_fifo_0_0.vds  design_1_axis_data_fifo_0_0_utilization_synth.rpt  gen_run.xml  runme.sh  vivado.jou  vivado.pb
(+404 files in other folders)
